--- a/app/components/heroSection.module.css
+++ b/app/components/heroSection.module.css
@@ -24,7 +24,7 @@
   font-weight: 600;
   line-height: normal;
   color: rgb(61, 59, 59);
-  font-family: var(--font-montserrat);
+  font-family: var(--font-space_grotesk);
 }
 
 .heroLeft {
