--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   box-shadow: 40px 0px 0px 0px rgba(214, 212, 216, 0.501),
     0 6px 20px 0 rgba(202, 201, 206, 0.535);
-    z-index: 999;
+  z-index: 999;
 }
 
 .navLinks {
@@ -47,20 +47,20 @@
 .dropContent {
   display: none;
   background-color: white;
-  min-width: 160px;
-  margin: 5px 10px 10px 0px;
+  max-width: 200px;
+  margin: 5px 5px 5px 5px;
   border-radius: 0 0 5px 5px;
   box-shadow: 0px 5px 5px 0px rgba(159, 159, 159, 0.2);
-  padding: 20px 0 0 0;
+  padding: 20px 10px 20px 10px;
   z-index: 999;
 }
 
 .dropContent ul li {
-  color: rgb(16, 16, 16);
-  padding: 1px 10px 16px 20px;
+  color: rgb(50, 50, 50);
+  padding: 5px 10px 5px 10px;
   text-decoration: none;
   font-size: 0.9em;
-  font-weight: 400;
+  font-weight: 500;
   display: block;
 }
 
@@ -70,12 +70,8 @@
   background-color: transparent;
   padding: 20px 0 0 0;
   top: 30px;
-  left: 0;
-  width: 10vw;
+  width: 150px;
   cursor: default;
-}
-.Links img{
-  padding: 0 0 5.5px 0;
 }
 /*
 .Links::before,
