--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -254,72 +254,70 @@
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   .business {
-    padding: 40px 10px 100px 10px;
-    margin: 0 auto;
+    padding: 100px 20px 100px 20px;
   }
 
   .businessContext {
-    max-width: 100vw;
-    display: grid;
-    justify-content: center;
-    text-align: center;
+    text-align: start;
+    width: 50%;
+    margin: auto;
+     padding: 0 10px 0 10px;
   }
-
-  .introMobile {
+  .businessImg {
+    width: 50%;
+    margin: auto;
+    padding: 0 10px 0 10px;
+  }
+  .intro {
     display: inline-block;
-    margin: 20px 0 20px 0;
-    padding: 5px 0 5px 0;
-    width: 50vw;
-    text-align: center;
+    padding: 7px 0 5px 20px;
+    width: 50%;
     font-size: 1em;
   }
 
-  .intro {
+  .introMobile {
     display: none;
   }
 
   .heading {
-    font-size: 2em;
     padding: 20px 0 20px 0;
+    font-size: 2.5em;
   }
 
   .businessContext p {
-    font-size: 1.3em;
-    line-height: 2;
-    padding: 20px 0 20px 0;
-  }
-
-  .btn {
-    padding: 20px 0 20px 0;
+    font-size: 1em;
   }
 
   .btn button {
+    background-color: rgb(184, 30, 148);
     padding: 10px 0 10px 0;
-    width: 50vw;
+    width: 14.5vw;
+    margin: 5px 0 5px 0;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(184, 30, 148);
+  }
+
+  .btn button:hover {
+    background-color: rgb(139, 70, 123);
+    color: white;
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
   .business {
-    padding: 120px 0 300px 0;
+    padding: 100px 0 100px 0;
     gap: 100px;
   }
 
   .businessContext {
     max-width: 30vw;
-    height: 50vh;
-    padding: 0px 0 0 0;
     text-align: start;
   }
 
   .intro {
     display: inline-block;
-    padding: 5px 0 5px 20px;
-    margin: 10px 0 10px 0;
+    padding: 7px 0 5px 20px;
     width: 16vw;
     font-size: 1em;
   }
