--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -49,7 +49,7 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .footer {
-    padding: 250px 20px 50px 20px;
+    padding: 250px 10px 50px 10px;
     gap: 20vw;
   }
 
@@ -95,7 +95,7 @@
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
   .footer {
-    padding: 250px 20px 50px 20px;
+    padding: 250px 10px 50px 10px;
     gap: 10vw;
   }
 
@@ -141,7 +141,7 @@
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
   .footer {
-    padding: 400px 20px 50px 20px;
+    padding: 400px 10px 50px 10px;
     gap: 10vw;
   }
 
@@ -150,20 +150,26 @@
   }
 
   .footerIntro {
-    max-width: 100vw;
+    width: 100%;
+    padding: 0 5px 0 5px;
   }
 
   .footerIntro p {
-    padding: 20px 0 20px 0;
+    padding: 0;
   }
 
   .footerContext {
-    max-width: 100vw;
-    gap: 25vw;
+    width: 100%;
+    gap: 10vw;
+    justify-content: start;
   }
 
   .footerContext img {
     padding: 0 0 20px 0;
+  }
+
+  .footerList {
+    width: 150px;
   }
 
   .footerList ul li {
@@ -185,7 +191,7 @@
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
   .footer {
-    padding: 400px 20px 50px 20px;
+    padding: 400px 10px 50px 10px;
     gap: 10vw;
   }
 
@@ -194,20 +200,26 @@
   }
 
   .footerIntro {
-    max-width: 70vw;
+    width: 100%;
+    padding: 0 65px 0 65px;
   }
 
   .footerIntro p {
-    padding: 20px 0 20px 0;
+    padding: 0;
   }
 
   .footerContext {
-    max-width: 100vw;
+    width: 100%;
     gap: 10vw;
+    justify-content: center;
   }
 
   .footerContext img {
     padding: 0 0 20px 0;
+  }
+
+  .footerList {
+    width: 150px;
   }
 
   .footerList ul li {
@@ -229,8 +241,7 @@
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   .footer {
-    padding: 300px 20px 50px 20px;
-    gap: 10vw;
+    padding: 350px 10px 50px 10px;
   }
 
   .footer h1 {
@@ -238,20 +249,26 @@
   }
 
   .footerIntro {
-    max-width: 60vw;
+    padding: 0 50px 0 0;
+    width: 350px;
   }
 
   .footerIntro p {
-    padding: 20px 0 20px 0;
+    padding: 0;
   }
 
   .footerContext {
     max-width: 100vw;
-    gap: 10vw;
+    gap: 20px;
+    justify-content: center;
   }
 
   .footerContext img {
     padding: 0 0 20px 0;
+  }
+
+  .footerList {
+    width: 150px;
   }
 
   .footerList ul li {
@@ -264,9 +281,7 @@
   }
 
   .footerBottom span {
-    text-align: center;
     font-size: 0.8em;
-    max-width: 100vw;
   }
 }
 
@@ -274,7 +289,7 @@
 @media (min-width: 1440px) {
   .footer {
     padding: 350px 0 50px 0;
-    gap: 10vw;
+    gap: 0;
   }
 
   .footer h1 {
@@ -282,20 +297,25 @@
   }
 
   .footerIntro {
-    max-width: 20vw;
+    padding: 0 50px 0 0;
   }
 
   .footerIntro p {
-    padding: 20px 0 20px 0;
+    padding: 0;
   }
 
   .footerContext {
     max-width: 100vw;
-    gap: 10vw;
+    gap: 20px;
+    justify-content: center;
   }
 
   .footerContext img {
     padding: 0 0 20px 0;
+  }
+
+  .footerList {
+    width: 200px;
   }
 
   .footerList ul li {
