--- a/app/components/downloadApp.module.css
+++ b/app/components/downloadApp.module.css
@@ -1,12 +1,10 @@
 .downloadApp {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   background-color: rgb(184, 30, 148);
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(157, 155, 155, 0.401),
     0 6px 20px 0 rgba(183, 182, 182, 0.224);
-  position: absolute;
   font-family: var(--font-space_grotesk);
 }
 
@@ -35,8 +33,6 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .downloadApp {
-    margin: 0px 10px 0px 10px;
-    bottom: 170vh;
   }
 
   .downloadAppContext {
@@ -66,13 +62,10 @@
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
-   .downloadApp {
-    margin: 0px 10px 0px 10px;
-    bottom: 100vh;
+  .downloadApp {
   }
 
   .downloadAppContext {
-    padding: 50px 10px 0 10px;
     max-width: 100vw;
     text-align: center;
   }
@@ -98,13 +91,11 @@
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
-   .downloadApp {
-    margin: 0px 10px 0px 10px;
-    bottom: 170vh;
+  .downloadApp {
   }
 
   .downloadAppContext {
-    padding: 50px 10px 0 10px;
+   
     max-width: 100vw;
     text-align: center;
   }
@@ -130,32 +121,81 @@
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
-  
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
+  .downloadApp {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(184, 30, 148);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(157, 155, 155, 0.401),
+      0 6px 20px 0 rgba(183, 182, 182, 0.224);
+    position: relative;
+    bottom: 100px;
+    font-family: var(--font-space_grotesk);
+    max-width: 90%;
+  }
+
+  .downloadAppContext {
+    width: 60%;
+    margin: auto;
+    text-align: start;
+    padding: 10px 0 10px 15px;
+  }
+  .downloadImg {
+    width: 40%;
+    margin: auto;
+  }
+
+  .downloadAppContext h1 {
+    font-weight: 900;
+    color: white;
+    font-size: 3em;
+    padding: 10px 0 10px 0;
+  }
+
+  .downloadAppContext p {
+    font-weight: 500;
+    color: white;
+    font-size: 1em;
+    max-width: 40vw;
+    padding: 10px 0 10px 0;
+  }
+
+  .heroSocials {
+    display: flex;
+    gap: 10px;
+    width: fit-content;
+    margin: 0 0 0 0;
+    padding: 20px 0 20px 0;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
   .downloadApp {
-    margin: 0px 200px 0px 200px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     background-color: rgb(184, 30, 148);
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(157, 155, 155, 0.401),
       0 6px 20px 0 rgba(183, 182, 182, 0.224);
-    position: absolute;
-    bottom: 430px;
+    position: relative;
+    bottom: 100px;
     font-family: var(--font-space_grotesk);
+    max-width: 100%;
   }
 
   .downloadAppContext {
-    padding: 80px 10px 10px 80px;
-    max-width: 40vw;
+    width: 50%;
+    margin: auto;
+    text-align: start;
+  }
+  .downloadImg {
+    width: 40%;
+    margin: auto;
   }
 
   .downloadAppContext h1 {
