--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -287,6 +287,7 @@
 
   .businessContext p {
     font-size: 1em;
+    padding: 0;
   }
 
   .btn button {
@@ -339,6 +340,7 @@
 
   .businessContext p {
     font-size: 1em;
+    padding: 0;
   }
 
   .btn button {
