--- a/app/components/heroSection.module.css
+++ b/app/components/heroSection.module.css
@@ -23,7 +23,7 @@
 .heroSection p {
   font-weight: 600;
   line-height: normal;
-  color: rgb(61, 59, 59);
+  color: #3b3b3b;
   font-family: var(--font-space_grotesk);
 }
 
