--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -7,8 +7,8 @@
 }
 
 .footer p {
-  color: #4b494b;
-  font-weight: 400;
+  color: #3b3b3b;
+  font-weight: 500;
   line-height: 2;
 }
 
@@ -26,9 +26,9 @@
 }
 
 .footerList ul li {
-  color: #4b494b;
-  font-weight: 400;
-  line-height: 2;
+  color: #3b3b3b;
+  font-weight: 500;
+  line-height: 2.5;
 }
 
 .footerBottom {
