--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -19,7 +19,6 @@
   color: rgb(184, 30, 148);
 }
 
-
 .footerContext {
   display: flex;
   flex-wrap: wrap;
@@ -29,6 +28,16 @@
   color: #3b3b3b;
   font-weight: 500;
   line-height: 2.5;
+}
+
+.Socials {
+  width: 100%;
+}
+
+.Socials ul {
+  display: inline-flex;
+  gap: 20px;
+  padding: 50px 0 0 0;
 }
 
 .footerBottom {
@@ -82,8 +91,20 @@
     max-width: 100vw;
   }
 
+  .Socials {
+    width: 100%;
+    position: relative;
+    left: 50%;
+  }
+
+  .Socials ul {
+    display: inline-flex;
+    gap: 20px;
+    padding: 50px 0 0 0;
+  }
+
   .footerBottom {
-    padding: 100px 0 50px 0;
+    padding: 50px 0 50px 0;
   }
 
   .footerBottom span {
@@ -95,7 +116,7 @@
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
-@media (min-width: 374px) {
+@media (min-width: 373px) {
   .footer {
     padding: 0 10px 50px 10px;
     gap: 0;
@@ -132,9 +153,20 @@
     font-size: 0.9em;
     max-width: 100vw;
   }
+  .Socials {
+    width: 100%;
+    position: relative;
+    left: 70%;
+  }
+
+  .Socials ul {
+    display: inline-flex;
+    gap: 20px;
+    padding: 50px 0 0 0;
+  }
 
   .footerBottom {
-    padding: 100px 0 50px 0;
+    padding: 50px 0 50px 0;
   }
 
   .footerBottom span {
@@ -183,9 +215,20 @@
     font-size: 0.9em;
     max-width: 100vw;
   }
+  .Socials {
+    width: 100%;
+    position: relative;
+    left: 0;
+  }
+
+  .Socials ul {
+    display: inline-flex;
+    gap: 20px;
+    padding: 50px 0 0 0;
+  }
 
   .footerBottom {
-    padding: 100px 0 50px 0;
+    padding: 50px 0 50px 0;
   }
 
   .footerBottom span {
@@ -233,9 +276,20 @@
     font-size: 0.9em;
     max-width: 100vw;
   }
+  .Socials {
+    width: 100%;
+    position: relative;
+    left: 0;
+  }
+
+  .Socials ul {
+    display: inline-flex;
+    gap: 20px;
+    padding: 50px 0 0 0;
+  }
 
   .footerBottom {
-    padding: 100px 0 50px 0;
+    padding: 50px 0 50px 0;
   }
 
   .footerBottom span {
@@ -332,7 +386,7 @@
   }
 
   .footerBottom {
-    padding: 100px 0 50px 0;
+    padding: 90px 0 50px 0;
   }
 
   .footerBottom span {
