--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -65,7 +65,7 @@
 
   .footerIntro {
     width: 100%;
-    padding: 0 5px 0 5px;
+    padding: 30px 5px 0 5px;
   }
 
   .footerIntro p {
@@ -127,7 +127,7 @@
 
   .footerIntro {
     width: 100%;
-    padding: 0 5px 0 5px;
+    padding: 30px 5px 0 5px;
   }
 
   .footerIntro p {
@@ -189,7 +189,7 @@
 
   .footerIntro {
     width: 100%;
-    padding: 0 5px 0 5px;
+    padding: 30px 5px 0 5px;
   }
 
   .footerIntro p {
@@ -250,7 +250,7 @@
 
   .footerIntro {
     width: 100%;
-    padding: 0 65px 0 65px;
+    padding: 30px 65px 0 65px;
   }
 
   .footerIntro p {
