--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -27,7 +27,7 @@
   font-family: var(--font-montserrat);
 }
 
-.Links {
+.links {
   display: flex;
   cursor: pointer;
   position: relative;
@@ -36,11 +36,11 @@
   padding: 0 0 3.5px 0;
 }
 
-.Links:hover .dropContent {
+.links:hover .dropContent {
   display: block;
 }
 
-.Links:hover .dropBg {
+.links:hover .dropBg {
   display: block;
 }
 
@@ -74,23 +74,22 @@
   cursor: default;
 }
 
-
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
   .navBar {
-  padding: 27px 100px 22px 50px;
-}
+    padding: 27px 100px 22px 50px;
+  }
 }
 
 @media (min-width: 1440px) {
   .navBar {
-  padding: 27px 150px 22px 100px;
-}
+    padding: 27px 150px 22px 100px;
+  }
 }
 
 /*
-.Links::before,
-.Links::after {
+.links::before,
+.links::after {
   position: absolute;
   width: 100%;
   height: 1px;
@@ -100,23 +99,23 @@
   pointer-events: none;
 }
 
-.Links::before {
+.links::before {
   content: "";
  show by default 
 }
-.Links::before {
+.links::before {
   transform-origin: 100% 50%;
   transform: scale3d(0, 1, 1);
   transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
 }
 
-.Links:hover::before {
+.links:hover::before {
   transform-origin: 0% 50%;
   transform: scale3d(1, 1, 1);
   transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
 }
 
-.Links::after {
+.links::after {
   content: "";
   top: calc(100% + 4px);
   transform-origin: 0% 50%;
@@ -124,7 +123,7 @@
   transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
 }
 
-.Links:hover::after {
+.links:hover::after {
   transform-origin: 100% 50%;
   transform: scale3d(1, 1, 1);
   transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
