--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -62,10 +62,9 @@
   }
 
   .introMobile {
-    display: inline-block;
-    margin: 20px 0 20px 0;
-    padding: 5px 0 5px 0;
-    width: 90vw;
+   display: inline-block;
+    padding: 5px 20px 5px 20px;
+    width: 100%;
     text-align: center;
     font-size: 1em;
   }
@@ -74,8 +73,8 @@
     display: none;
   }
 
-  .heading h1 {
-    font-size: 1.6em;
+  .heading {
+    font-size: 1.5em;
     padding: 20px 5px 20px 5px;
   }
 
@@ -113,10 +112,9 @@
   }
 
   .introMobile {
-    display: inline-block;
-    margin: 20px 0 20px 0;
-    padding: 5px 0 5px 0;
-    width: 90vw;
+   display: inline-block;
+    padding: 5px 20px 5px 20px;
+    width: 100%;
     text-align: center;
     font-size: 1.1em;
   }
@@ -126,7 +124,7 @@
   }
 
   .heading {
-    font-size: 1.9em;
+    font-size: 1.8em;
     padding: 20px 5px 20px 5px;
   }
 
@@ -164,10 +162,9 @@
   }
 
   .introMobile {
-    display: inline-block;
-    margin: 20px 0 20px 0;
-    padding: 5px 0 5px 0;
-    width: 90vw;
+   display: inline-block;
+    padding: 5px 20px 5px 20px;
+    width: 100%;
     text-align: center;
     font-size: 1.1em;
   }
@@ -216,9 +213,8 @@
 
   .introMobile {
     display: inline-block;
-    margin: 20px 0 20px 0;
-    padding: 5px 0 5px 0;
-    width: 50vw;
+   padding: 5px 20px 5px 20px;
+    width: 50%;
     text-align: center;
     font-size: 1.1em;
   }
@@ -270,10 +266,11 @@
   }
 
   .intro {
-    display: inline-block;
-    padding: 7px 0 5px 20px;
-    width: 50%;
+   display: inline-block;
+    padding: 5px 20px 5px 20px;
     font-size: 1em;
+    width: fit-content;
+    text-align: center;
   }
 
   .introMobile {
@@ -315,18 +312,20 @@
     text-align: start;
     max-width: 50%;
     margin: auto;
-    padding: 0 100px 0 0;
+    padding: 0 200px 0 0;
   }
   .businessImg {
-    max-width: 40%;
+    max-width: 50%;
     margin: auto;
-    padding: 0 0 0 100px;
+    padding: 0 0 0 200px;
   }
+
   .intro {
     display: inline-block;
-    padding: 7px 0 5px 20px;
-    width: 16vw;
+    padding: 5px 20px 5px 20px;
     font-size: 1em;
+    width: fit-content;
+    text-align: center;
   }
 
   .introMobile {
