--- a/app/components/downloadApp.module.css
+++ b/app/components/downloadApp.module.css
@@ -235,6 +235,7 @@
   .downloadAppContext h1 {
     line-height: normal;
     font-size: 2.5em;
+    max-width: 45vw;
   }
 
   .downloadAppContext p {
