--- a/app/components/heroSection.module.css
+++ b/app/components/heroSection.module.css
@@ -11,6 +11,7 @@
   border-radius: 10px;
   flex-wrap: wrap;
   width: 100%;
+  margin: auto;
 }
 
 .heroSection h1 {
@@ -29,9 +30,6 @@
 
 .heroLeft {
   display: grid;
-  flex: 1 1 0%;
-  width: fit-content;
-  height: fit-content;
 }
 
 .heroSocials {
@@ -60,8 +58,8 @@
   }
 
   .heroLeft {
-    margin: auto;
-    width: 50%;
+    margin: 0;
+    width: 100%;
     padding: 50px 0 0 0;
   }
 
@@ -96,8 +94,8 @@
   }
 
   .heroLeft {
-    margin: auto;
-    width: 50%;
+    margin: 0;
+    width: 100%;
     padding: 50px 0 0 0;
   }
 
@@ -132,8 +130,8 @@
   }
 
   .heroLeft {
-    margin: auto;
-    width: 50%;
+    margin: 0;
+    width: 100%;
     padding: 50px 0 0 0;
   }
 
@@ -169,8 +167,8 @@
   }
 
   .heroLeft {
-    margin: auto;
-    width: 50%;
+    margin: 0;
+    width: 100%;
     padding: 50px 0 0 0;
   }
 
@@ -192,34 +190,41 @@
 
   .heroBg {
     text-align: start;
-    padding: 0 20px 0 20px;
+    padding: 40px 0 40px 0;
   }
 
   .heroSection p {
-    font-size: 1.2em;
-    width: 80%;
+    font-size: 1.5vw;
+    width: 85%;
     padding: 20px 0 20px 0;
   }
 
   .heroSection h1 {
-    font-size: 4.4vw;
+    font-size: 3.9vw;
+    width: 100%;
     padding: 20px 0 20px 0;
   }
 
   .heroLeft {
+    padding: 0 0 0 80px;
+    max-width: 50%;
     margin: auto;
-    width: 50%;
-    padding: 0;
   }
 
   .heroSocials {
-    padding: 50px 0 50px 0;
+    padding: 20px 0 20px 0;
     margin: 0;
+    width: 70%;
   }
+
   .heroImage {
-    margin: auto;
-    width: 50%;
+    max-width: 50%;
     padding: 0;
+  }
+
+  .heroImage img {
+    width: 83%;
+    margin: auto;
   }
 }
 
@@ -231,32 +236,39 @@
 
   .heroBg {
     text-align: start;
-    padding: 0 50px 0 50px;
+    padding: 40px 0 40px 0;
   }
 
   .heroSection p {
-    font-size: 1.2em;
-    width: 80%;
+    font-size: 1.3vw;
+    width: 75%;
+    margin: 0;
   }
 
   .heroSection h1 {
     font-size: 3.5vw;
+    margin: 0;
+    width: 100%;
   }
 
   .heroLeft {
     margin: auto;
     width: 50%;
-    padding: 0 0 0 100px;
+    padding: 0 0 0 150px;
   }
 
   .heroSocials {
     padding: 70px 0 50px 0;
     margin: 0;
+    width: 100%;
   }
 
   .heroImage {
-    margin: auto;
     width: 50%;
     padding: 0;
+  }
+
+  .heroImage img {
+    width: 75%;
   }
 }
